// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMessage messages match expected format 1`] = `
"Error: hulu \`RobotError\`
https://my.apify.com/view/runs/123
\`\`\`{
    \\"input\\": {
        \\"stealth\\": true,
        \\"debug\\": true,
        \\"session\\": null
    },
    \\"error\\": {
        \\"name\\": \\"Robot.Error\\",
        \\"type\\": \\"RobotError\\",
        \\"retry\\": false,
        \\"message\\": \\"generic error message\\"
    }
}\`\`\`"
`;

exports[`formatMessage notifications exclude noisy messages from Playwright/Puppeteer 1`] = `
"Error: hulu \`RobotError\`
https://my.apify.com/view/runs/123
\`\`\`{
    \\"input\\": {
        \\"stealth\\": true,
        \\"debug\\": true,
        \\"session\\": null
    },
    \\"error\\": {
        \\"name\\": \\"Robot.Error\\",
        \\"type\\": \\"RobotError\\",
        \\"retry\\": false,
        \\"message\\": \\"Playwright error message detected. Please visit the Apify run URL for error details.\\"
    }
}\`\`\`"
`;

exports[`formatMessage verbose mode works for Playwright 1`] = `
"Error: hulu \`RobotError\`
https://my.apify.com/view/runs/123
\`\`\`{
    \\"input\\": {
        \\"stealth\\": true,
        \\"debug\\": true,
        \\"session\\": null
    },
    \\"error\\": {
        \\"name\\": \\"Robot.Error\\",
        \\"type\\": \\"RobotError\\",
        \\"retry\\": false,
        \\"message\\": \\"\\\\n  page.goto: NS_ERROR_PROXY_BAD_GATEWAY\\\\n=========================== logs ===========================\\\\nnavigating to \\\\\\"https://auth.hulu.com/web/login\\\\\\", waiting until \\\\\\"load\\\\\\"\\\\n============================================================\\\\nNote: use DEBUG=pw:api environment variable to capture Playwright logs.\\\\n\\"
    }
}\`\`\`"
`;
